--- a/src/html/index.html
+++ b/src/html/index.html
@@ -9,7 +9,7 @@
     <title>Evaluación final Maitane</title>
   </head>
 
-  <body>
+  <body class="body">
     <include src="./partials/header.html"></include>
     <include src="./partials/main.html"></include>
     <include src="./partials/footer.html"></include>
